--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ body {
   transition: background-color 0.3s ease;
 }
 
-.sidebar a {
+.linkStyle {
   display: block;
   color: white;
   text-decoration: none;
@@ -48,7 +48,7 @@ body {
   transition: background-color 0.3s, transform 0.3s;
 }
 
-.sidebar a:hover {
+.linkStyle:hover {
   background-color: #3b4349;
   transform: translateX(5px);
 }
